# tyys-CAPTCHA-recognition

./: README.md  pocv7.py  pyproject.toml  requirements.txt
